--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.9'
 services:
   postgres:
     image: postgres:16-alpine
@@ -16,6 +15,7 @@ services:
       interval: 5s
       timeout: 5s
       retries: 10
+
   pgadmin:
     image: dpage/pgadmin4:8
     container_name: bank-pgadmin
@@ -26,5 +26,22 @@ services:
       - "5050:80"
     depends_on:
       - postgres
+
+  bank-backend:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: bank-backend
+    ports:
+      - "8080:8080"
+    depends_on:
+      postgres:
+        condition: service_healthy
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/bankdb
+      SPRING_DATASOURCE_USERNAME: bankapp
+      SPRING_DATASOURCE_PASSWORD: bankapp126503
+      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+
 volumes:
   pgdata:
