application properties updated

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,12 +6,12 @@ server.port=${PORT:8080}
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hiberanate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 # JWT
-app.jwt.secret=${APP_JWT_SECRET}
+app.jwt.secret=${APP_JWT_SECRET:changeme}
 app.jwt.expiration-minutes=120
 app.security.allow-swagger=true
 
