--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.hiberanate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # JWT
 app.jwt.secret=${APP_JWT_SECRET:changeme}
