application properties updated

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=backend
 server.port=${PORT:8080}
 
 # Database
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/bankdb}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:bankapp}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:bankapp126503}
 spring.jpa.hiberanate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
